# sql_migrator

./: .gitignore  CMakeLists.txt  README.md
src/: config.cpp  config.hpp  generator.cpp  generator.hpp  init.cpp  init.hpp  main.cpp  util.cpp  util.hpp
